fix(frontend): expose injected services to Angular templates